# password-manager

./: .gitignore  README.md  pyproject.toml
src/passwordmanager/: auth.py  cli.py  security.py  storage.py  vault.py
